--- a/bla/static/css/wichtel.css
+++ b/bla/static/css/wichtel.css
@@ -1,4 +1,21 @@
+.logo {
+    width: 60px;
+    height: 60px;
+    float: left
+}
+
+#home-button {
+    float: right;
+}
 
 .form-inline > p > label {
 	display: none;
+}
+
+.status-msg {
+    font-style: italic;
+}
+
+.admin-panel {
+
 }
