--- a/bla/templates/bla/base.html
+++ b/bla/templates/bla/base.html
@@ -8,17 +8,14 @@
   <title>{% block title %}title{% endblock %}</title>
 
   <!-- Bootstrap CSS -->
-
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link href="//cdn.bootcss.com/bootstrap-datetimepicker/4.17.44/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/wichtel.css' %}">
 
-
-  <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-
   <!-- datepicker -->
   <script src="//cdn.bootcss.com/moment.js/2.17.1/moment.min.js"></script>
   <script src="//cdn.bootcss.com/bootstrap-datetimepicker/4.17.44/js/bootstrap-datetimepicker.min.js"></script>
@@ -26,27 +23,33 @@
 </head>
 <body>
 
-<a href="/bla/events/">home</a>
-
-  <div class="container">
-    <div class="jumbotron">
-      {% block header %}
-        <p></p>
-      {% endblock %}
+<div class="container">
+  <div class="row" style="margin-top: 2em">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-10">
+      <div class="card">
+        <div class="card-header">
+          <img src="" alt="" class="logo"><a href="{% url 'event_list' %}" ></a></img>
+          {% block card_header %}title{% endblock %}
+        </div>
+        <div class="card-block">
+          {% block card_content %}content{% endblock %}
+        </div>
+          {% block card_footer %}<div class="card-footer text-muted"></div>{% endblock %}
+      </div>
     </div>
   </div>
-
-  <div class="row">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-8">
-      {% block content %}
-        <p></p>
-      {% endblock %}
+  <div class="row" style="margin-top: 2em">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-10">
+      {% block content %} {% endblock %}
     </div>
-    <div class="col-sm-2"></div>
+    <div class="col-sm-1"></div>
 
   </div>
+</div>
 
+  {% block js %}{% endblock %}
 
 </body>
 </html>
