--- a/wichtel_app/static/css/wichtel.css
+++ b/wichtel_app/static/css/wichtel.css
@@ -1,3 +1,9 @@
+body {
+    /*
+     background-color: black;
+    */
+}
+
 .logo {
     width: 60px;
     height: 60px;
@@ -17,5 +23,7 @@
 }
 
 .admin-panel {
-
+    margin-top: 2em;
+    padding-top: 2em;
+    border-top: 1px solid #ccc;
 }
