--- a/wichtel_app/templates/wichtel_app/base.html
+++ b/wichtel_app/templates/wichtel_app/base.html
@@ -6,16 +6,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>{% block title %}title{% endblock %}</title>
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link href="//cdn.bootcss.com/bootstrap-datetimepicker/4.17.44/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/wichtel.css' %}">
 
-    <!-- jQuery first, then Tether, then Bootstrap JS. -->
-  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+
   <!-- datepicker -->
   <script src="//cdn.bootcss.com/moment.js/2.17.1/moment.min.js"></script>
   <script src="//cdn.bootcss.com/bootstrap-datetimepicker/4.17.44/js/bootstrap-datetimepicker.min.js"></script>
@@ -25,29 +24,26 @@
 
 <div class="container">
   <div class="row" style="margin-top: 2em">
-    <div class="col-sm-1"></div>
-    <div class="col-sm-10">
+    <div class="col">
       <div class="card">
+        <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
         <div class="card-header">
-          <img src="" alt="" class="logo"><a href="{% url 'event_list' %}" ></a></img>
           {% block card_header %}title{% endblock %}
         </div>
         <div class="card-block">
           {% block card_content %}content{% endblock %}
         </div>
-          {% block card_footer %}<div class="card-footer text-muted"></div>{% endblock %}
+          {% block card_footer %}{% endblock %}
       </div>
     </div>
   </div>
   <div class="row" style="margin-top: 2em">
-    <div class="col-sm-1"></div>
-    <div class="col-sm-10">
       {% block content %} {% endblock %}
-    </div>
-    <div class="col-sm-1"></div>
-
   </div>
+  <div style="height: 200px"></div>
 </div>
+
+  {% block dialogs %} {% endblock %}
 
   {% block js %}{% endblock %}
 
