--- a/wichtel_app/templates/wichtel_app/event_new.html
+++ b/wichtel_app/templates/wichtel_app/event_new.html
@@ -5,7 +5,7 @@
 
 
 {% block card_header %}
-  <h4>Dein Event anlegen</h4>
+Neues Event
 {% endblock %}
 
 {% block card_content %}
@@ -21,7 +21,7 @@
 
 {% block content %}
     <div class="col"></div>
-    <div class="col-6">
+    <div class="col-8">
     <form method="POST" class="post-form" action="{% url 'event_new' %}">
         {% csrf_token %}
         <div class="form-group">
