--- a/wichtel_app/templates/wichtel_app/participant_detail.html
+++ b/wichtel_app/templates/wichtel_app/participant_detail.html
@@ -5,7 +5,7 @@
 
 
 {% block card_header %}
-  <h1>{{ participant.event.name }}: {{ participant.name }}</h1>
+{{ participant.name }}
 {% endblock %}
 
 {% block card_content %}
